--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^7.4.0",
-    "amqplib": "^0.5.5",
+    "@fastify/aws-lambda": "^3.1.3",
+    "amqplib": "^0.8.0",
     "axios": "^0.19.0",
     "boom": "^7.3.0",
     "chai": "^4.2.0",
