--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,7 @@ jobs:
       - name: Deploy with terraform
         working-directory: ${{ env.BASE_DIR }}/devops/terraform/rio-plus/audit_log_lambda/
         run: |
+          cd ${{ env.BASE_DIR }}/devops/terraform/rio-plus/audit_log_lambda/
           terraform init -backend-config=${{ env.STAGE }}_conf.hcl -reconfigure
           terraform workspace select ${{ env.STAGE }}
           terraform apply -var src_path=$GITHUB_WORKSPACE -auto-approve -no-color
